# modulepp

./: CMakeLists.txt  LICENSE  README.md  modulepp.h  tests.cpp
BadModule/: BadModule.cpp  BadModule.h
TestModule/: TestModule.cpp  TestModule.h
include/: modulepp.h  ohlog.h
modules/: CMakeLists.txt
modules/BadModule/: BadModule.cpp  BadModule.h  CMakeLists.txt
modules/GPS/: CMakeLists.txt  GPS.cpp  GPS.h
modules/GPSDataUser/: CMakeLists.txt  GPSDataUser.cpp  GPSDataUser.h
modules/ModuleWithDependency/: CMakeLists.txt  ModuleWithDependency.cpp  ModuleWithDependency.h
modules/TestModule/: CMakeLists.txt  TestModule.h
tests/: ModuleDependencyTests.cpp  ModuleInformationTests.cpp  ModuleVersionTests.cpp  ReadMe.cpp  TestModule.cpp  test.cpp
